# phyton

./: README.md
01_fundamentos/: main.py
01_fundamentos/_docs_python/: 01-2_instalacoes_views.txt  01_instalacoes.txt  01_instalacoes_pyenv_e_python.txt  02_.txt  02_gerenciadores.txt  02_inicio_projetos.txt  02_resumo_uso_installs.txt  03_2_pacotes_preferidos.txt  03_TOPS_Programas.txt  03_instalacoes_projetos.txt  03_instalador_global_em_uso_pipx.txt  03_preferidos_Programas.txt  03_preferidos_pacotes_global_python.txt  03_projetos_gerenciador_poetry.txt  03_resumo_em_uso_pyenv_poetry.txt  04_comandos_api.txt  04_comandos_projeto_poetry_api.txt  04_projetos_gerenciador_poetry.txt  05_libs_bibliotecas_python.txt  06_pytets_opcoes.txt  06_tests_pytest.txt  ERROS_projeto_python.txt  LINUX_comandos.txt  Linux_utilitarios.txt  RODAR_USAR_TOP_libs.txt  SETUP_PROJETO_PYTHON_VERSOES.txt  _PGM_PENSAMENTO.txt  arquiteturas.txt  backup_editor_vscode_Python_Terceiros.txt  backup_editor_vscode_snippet_python.txt  banco_de_dados_comandos_uso.txt  banco_tinydb_passos_implementacao.txt  comandos_uteis_python.txt  dados_pesquisa_de_acesso_dados_em_containers_listas_e_tuplas.txt  docs__implementacoes.txt  entrada_de_dados.txt  erros_comuns_implementacoes_python.txt  escopos_01_debugger_01_ferramentas_para_debugar.txt  escopos_02_debugger_02_escopo_funcoes.txt  escopos_03_closures.txt  (+11 more)
01_fundamentos/a_instalacoes/: 00_comandos_importantes_sistema.py  01_sitepackages.py  02_caminho_usado_pra_py_encontrar_modulos.py  03_AmbientesVirtuais_proj_venv.txt  (+5 more)
GraphqlRest_01/: database.db  exemplo_01.py  pyproject.toml
PYTHON_VIA_DOCKER/: Dockerfile
api_Graphql_RestFast_DB-TinyDB/: app.py  pyproject.toml  rest_cliente.py
api_Graphql_RestFast_DB-TinyDB/documentacao/: 01_instalacoes.txt
api_Graphql_RestFast_DB-TinyDB/handlers/: clientes_db.py
api_Graphql_RestFast_DB-TinyDB/models/: cliente.py
api_Graphql_RestFast_DB-TinyDB/models/cliente/: cliente.py
api_Graphql_RestFast_DB-TinyDB/routes/: clientes.py
api_redesocial_py_mongo/: .env  pyproject.toml
api_redesocial_py_mongo/src/: main.py  server.py
api_redesocial_py_mongo/src/_http-simulador/: inicio.http
api_redesocial_py_mongo/src/models/: user.py
api_redesocial_py_mongo/src/repositories/: user_repositories.py
api_redesocial_py_mongo/src/routes/: user_router.py
banco_de_dados/: pyproject.toml
banco_de_dados/src/01/: arquivo.py
banco_de_dados/src/exemplo_01/: connection_mongo.py  instancias.py  model_exemplo_01.py
proj_pydantic/: main.py  pyproject.toml  validando_argumentos.py
py_Base_Projeto_com_Poetry_py3_10_5/: main.py  pyproject.toml
py_Base_Projeto_com_Poetry_py3_10_5/projeto_base_poetry/: main.py
py_Base_Projeto_com_Poetry_py3_10_5/projeto_base_poetry/brincadeira/: brincadeira.py
py_Base_Projeto_com_Poetry_py3_10_5/projeto_base_poetry/matematica/: soma.py
py_Base_Projeto_com_Poetry_py3_10_5/test-poetry/ttt/: pyproject.toml
py_Base_Projeto_com_Poetry_py3_10_5/test-poetry/ttt/tests/: test_ttt.py
py_Base_Projeto_com_Poetry_py3_10_5/tests/: test_pytets.py
py_straberry_fastapi_sqlmodel/222/: exemplo_01.py  pyproject.toml
(+86 files in other folders)
