[tool.poetry]
name = "api_graphql_restfast_db-tinydb"
version = "0.1.0"
description = ""
authors = ["rzjprogramador <rzjprogramador@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = "^0.79.0"
tinydb = "^4.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
