[tool.poetry]
name = "api_redesocial_py_mongo"
version = "0.1.0"
description = ""
authors = ["rzjprogramador <rzjprogramador@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.5"
fastapi = "^0.79.0"
pydantic = {extras = ["email"], version = "^1.9.1"}
motor = "^3.0.0"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
uvicorn = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
