[tool.poetry]
name = "banco_de_dados"
version = "0.1.0"
description = ""
authors = ["rzjprogramador <rzjprogramador@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.5"
pydantic = "^1.9.1"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
odmantic = "^0.5.0"
motor = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
