[tool.poetry]
name = "projeto_com_poetry_py3_10_5"
version = "0.1.0"
description = "iniciando projeto com poetry python versao 3.10.5"
authors = ["rzjprogramador <rzjprogramador@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
