[tool.poetry]
name = "graphql_fastapi_sqlite"
version = "0.1.0"
description = ""
authors = ["rzjprogramador <rzjprogramador@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.5"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
